--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,5 +1,7 @@
-$mobile-screen-large: "only screen and (max-width: 425px)";
-$mobile-screen-medium: "only screen and (max-width: 375px)";
-$mobile-screen-small: "only screen and (max-width: 320px)";
+$media-mobile-l: "only screen and (max-width: 425px)";
+$media-mobile-m: "only screen and (max-width: 375px)";
+$media-mobile-s: "only screen and (max-width: 320px)";
 $fontsans: "Source Sans Pro", sans-serif;
 $fontslab: "Roboto Slab", serif;
+$deepblue: hsl(213, 15%, 12%);
+$orange: hsl(19, 90%, 55%);
