--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -1,7 +1,11 @@
 $media-mobile-l: "only screen and (max-width: 425px)";
 $media-mobile-m: "only screen and (max-width: 375px)";
 $media-mobile-s: "only screen and (max-width: 320px)";
-$fontsans: "Source Sans Pro", sans-serif;
-$fontslab: "Roboto Slab", serif;
+$fontsans: "Source Sans Pro","Lucida Sans", "Montserrat", sans-serif;
+$fontslab: "Roboto Slab", "Garamond", "Genius", "Georgia serif", serif;
 $deepblue: hsl(213, 15%, 12%);
 $orange: hsl(19, 90%, 55%);
+$subtitle: 1rem;
+$title: 3rem;
+$base: hsl(19, 100%, 50%);
+$textcolor: hsl(0, 0%, 44%);
