--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -60,12 +60,16 @@
     }
     .formInput input{
         width: 300px;
-        height: 50px;
+        height: 40px;
         border-radius: 81px 91px 84px 86px;
         border: none;
+        padding-left: 15px;
+        background-color: #000;
+        border: 1px solid #fff;
+        color: #fff;
     }
     .formInput button{
-        height: 50px;
+        height: 45px;
         width: 150px;
         border-radius: 81px 91px 84px 86px;
         position: relative;
