--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -15,7 +15,7 @@ body {
 
 h1{
     font-family: vars.$fontsans;
-    font-size: 3rem;
+    font-size: vars.$title;
     inline-size: 600px;
     word-wrap: break-word;
     text-transform: uppercase;
@@ -38,4 +38,12 @@ h1{
       font-size: 2rem;
       line-height: 2.3rem;
     }
+}
+
+button{
+  border: none;
+  background: none;
+  border-radius: 5px;
+  color: black;
+  cursor: pointer;
 }
