--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -1,1 +1,11 @@
 @use './vars';
+
+
+.layoutWrapper{
+    display: flex;
+    flex-direction: column;
+    main{
+        flex: 1;
+        margin-bottom: 30px;
+    }
+}
