--- a/styles/linkbtn.module.scss
+++ b/styles/linkbtn.module.scss
@@ -1,2 +1,39 @@
 @use './vars';
 
+.primary{
+    background-color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    padding: 5px;
+    font-weight: 600;
+    span{
+        color: vars.$base;
+    }
+}
+
+.secondary{
+    background-color: vars.$base;
+    text-decoration: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    padding: 5px;
+    span{
+        color: #fff;
+    }
+}
+
+.three{
+    border: 2px solid vars.$base;
+    background-color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    width: 100px;
+    height: 40px;
+    padding: 5px;
+    span{
+        color: #000;
+    }
+}
