started fixing pages of the site

--- a/styles/_vars.scss
+++ b/styles/_vars.scss
@@ -7,5 +7,7 @@ $deepblue: hsl(213, 15%, 12%);
 $orange: hsl(19, 90%, 55%);
 $subtitle: 1rem;
 $title: 3rem;
+$heading: 2.3rem;
 $base: hsl(19, 100%, 50%);
 $textcolor: hsl(0, 0%, 44%);
+$lh-small: 1.8rem;
