--- a/styles/footer.module.scss
+++ b/styles/footer.module.scss
@@ -58,6 +58,10 @@
             text-align: center;
         }
     }
+    p span{
+        margin-right: 10px;
+        margin-top: 10px;
+    }
     .formInput input{
         width: 300px;
         height: 40px;
