--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,6 +12,10 @@ body {
   box-sizing: border-box;
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 
 h1{
     font-family: vars.$fontsans;
@@ -40,10 +44,22 @@ h1{
     }
 }
 
+h2{
+  font-size: vars.$heading;
+  font-family: vars.$fontslab;
+  text-transform: capitalize;
+  color: vars.$textcolor;
+}
+
 button{
   border: none;
   background: none;
   border-radius: 5px;
   color: black;
   cursor: pointer;
+}
+
+.container{
+  width: 100%;
+  min-height: 100vh;
 }
