--- a/styles/linkbtn.module.scss
+++ b/styles/linkbtn.module.scss
@@ -4,10 +4,12 @@
     background-color: #fff;
     text-decoration: none;
     border-radius: 5px;
-    width: 100px;
+    width: 180px;
     height: 40px;
     padding: 5px;
     font-weight: 600;
+    display: grid;
+    place-items: center;
     span{
         color: vars.$base;
     }
@@ -17,22 +19,26 @@
     background-color: vars.$base;
     text-decoration: none;
     border-radius: 5px;
-    width: 100px;
+    width: 180px;
     height: 40px;
     padding: 5px;
+    display: grid;
+    place-items: center;
     span{
         color: #fff;
     }
 }
 
 .three{
-    border: 2px solid vars.$base;
+    border: 1px solid vars.$base;
     background-color: #fff;
     text-decoration: none;
     border-radius: 5px;
-    width: 100px;
+    width: 180px;
     height: 40px;
     padding: 5px;
+    display: grid;
+    place-items: center;
     span{
         color: #000;
     }
