--- a/styles/nav.module.scss
+++ b/styles/nav.module.scss
@@ -22,7 +22,7 @@
 
 
 .navItems > ul{
-    width: 60%;
+    width: 70%;
     display: flex;
     a{
         color: #000;
@@ -30,4 +30,8 @@
         font-family: vars.$fontsans;
         font-size: .86rem;
     }
+}
+
+.logo a img{
+    max-width: 100px;
 }
