--- a/styles/about.module.scss
+++ b/styles/about.module.scss
@@ -10,6 +10,7 @@
     padding: 0px 20px; 
     & > p{
         color: #000;
+        font-family: vars.$fontslab;
         font-weight: 600;
         text-transform: capitalize;
         position: relative;
@@ -37,6 +38,7 @@
         p{
             max-inline-size: 450px;
             color: vars.$textcolor;
+            font-family: vars.$fontslab;
         }
     }
 }
@@ -78,6 +80,7 @@
         p{
             max-inline-size: 350px;
             color: vars.$textcolor;
+            font-family: vars.$fontslab;
             line-height: vars.$lh-small;
         }
     }
